--- a/app/src/main/res/layout/page_reservation.xml
+++ b/app/src/main/res/layout/page_reservation.xml
@@ -1,63 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ListChauffeurReservation">
 
+    <TextView
+        android:id="@+id/pageReservationTitre"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="@string/titrePageReservationClient"
+        android:layout_marginTop="100dp"/>
+
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/choisirDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Date de départ"
+        android:inputType="datetime"
+        android:ems="10"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:layout_below="@id/pageReservationTitre"/>
+
+    <EditText
+        android:id="@+id/entrerLieuDepart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
         android:text=""
         android:hint="Lieu de départ"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="131dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/choisirDate"/>
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
+        android:id="@+id/entrerDestination"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="Destination"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="213dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/entrerLieuDepart"/>
 
-    <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="297dp" />
 
     <EditText
-        android:id="@+id/editTextTime2"
+        android:id="@+id/choisirHeureArrivee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="time"
-        android:hint="Heure de départ"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="62dp" />
+        android:hint="Heure d'arrivee"
+        android:layout_below="@id/entrerDestination"
+        android:layout_marginTop="30dp"
+        android:layout_centerHorizontal="true"/>
+
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnAnnulerReservation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Annuler"
         tools:layout_editor_absoluteX="84dp"
-        tools:layout_editor_absoluteY="643dp" />
+        tools:layout_editor_absoluteY="643dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="50dp"
+        android:layout_marginLeft="50dp"/>
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/reserverBtnPageReservation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Réserver"
         tools:layout_editor_absoluteX="229dp"
-        tools:layout_editor_absoluteY="643dp" />
+        tools:layout_editor_absoluteY="643dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="50dp"
+        android:layout_marginRight="50dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
