--- a/app/src/main/res/layout/commons_page_connexion.xml
+++ b/app/src/main/res/layout/commons_page_connexion.xml
@@ -16,7 +16,7 @@
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:hint="password"
-        android:id="@+id/password"
+        android:id="@+id/passwordPageConnexion"
         android:inputType="textPassword"
         android:layout_centerHorizontal="true"
         android:layout_above="@id/btnLogin"
@@ -27,8 +27,8 @@
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:hint="Login"
-        android:id="@+id/login"
-        android:layout_above="@id/password"
+        android:id="@+id/loginPageConnexion"
+        android:layout_above="@id/passwordPageConnexion"
         android:layout_marginBottom="30dp"
         android:layout_centerHorizontal="true"
         />
