--- a/app/src/main/res/layout/chauffeur_creation_compte.xml
+++ b/app/src/main/res/layout/chauffeur_creation_compte.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="50dp"/>
 
     <EditText
-        android:id="@+id/entrezNom"
+        android:id="@+id/entrezNomChauffeur"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
@@ -27,38 +27,38 @@
         android:hint="@string/entrezNom"/>
 
     <EditText
-        android:id="@+id/entrezPrenom"
+        android:id="@+id/entrezPrenomChauffeur"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginTop="50dp"
-        android:layout_below="@+id/entrezNom"
+        android:layout_below="@+id/entrezNomChauffeur"
         android:hint="@string/entrezPrenom"/>
 
     <EditText
-        android:id="@+id/entrezMail"
+        android:id="@+id/entrezMailChauffeur"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginTop="50dp"
-        android:layout_below="@+id/entrezPrenom"
+        android:layout_below="@+id/entrezPrenomChauffeur"
         android:hint="@string/entrezMail"/>
 
     <EditText
-        android:id="@+id/entrezTelephone"
+        android:id="@+id/entrezTelephoneChauffeur"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginTop="50dp"
-        android:layout_below="@+id/entrezMail"
+        android:layout_below="@+id/entrezMailChauffeur"
         android:hint="@string/entrezTel"
         android:inputType="phone"/>
 
     <Button
-        android:id="@+id/continuerCreationCompte"
+        android:id="@+id/continuerCreationCompteChauffeur"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Suivant"
