--- a/app/src/main/res/layout/chauffeur_page_mon_compte.xml
+++ b/app/src/main/res/layout/chauffeur_page_mon_compte.xml
@@ -24,7 +24,7 @@
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Date"
+        android:text=""
         tools:layout_editor_absoluteX="20dp"
         tools:layout_editor_absoluteY="20dp" />
 
