--- a/app/src/main/res/layout/client_page_mon_compte.xml
+++ b/app/src/main/res/layout/client_page_mon_compte.xml
@@ -49,7 +49,7 @@
         android:id="@+id/dateCompteClient"
         android:layout_width="133dp"
         android:layout_height="26dp"
-        android:text="15/02/2023 - Jeudi"
+        android:text=""
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="20dp"
         android:layout_alignParentLeft="true"
