--- a/app/src/main/res/layout/chauffeur_page_gestion_reservation.xml
+++ b/app/src/main/res/layout/chauffeur_page_gestion_reservation.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="50dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewMesDemandesDeCourses"
             android:layout_width="wrap_content"
             android:layout_height="400dp"
             android:layout_centerHorizontal="true"
