--- a/app/src/main/res/layout/commons_mes_parametres.xml
+++ b/app/src/main/res/layout/commons_mes_parametres.xml
@@ -4,35 +4,54 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+    <TextView
+            android:id="@+id/mailEnregiste"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"/>
+
+    <TextView
+            android:id="@+id/telEnregiste"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:layout_below="@id/mailEnregiste"/>
+
     <EditText
             android:id="@+id/mofifierMonMail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:layout_centerHorizontal="true"
-            android:layout_margin="30dp"
             android:hint="modifier mon mail"
-            android:inputType="textWebEmailAddress"/>
+            android:layout_below="@id/telEnregiste"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:ems="10"
+            android:inputType="textWebEmailAddress"
+            android:layout_marginBottom="30dp"/>
 
     <EditText
             android:id="@+id/confNouveauMail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:layout_centerHorizontal="true"
             android:layout_margin="30dp"
+            android:ems="10"
+            android:inputType="textWebEmailAddress"
             android:layout_below="@+id/mofifierMonMail"
-            android:hint="confirmer nouveau mail"
-            android:inputType="textWebEmailAddress"/>
+            android:hint="confirmer nouveau mail"/>
 
     <EditText
             android:id="@+id/nouveauTel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/confNouveauMail"
             android:inputType="phone"
+            android:ems="10"
             android:hint="modifier n° de tél" android:layout_marginTop="30dp" android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp" android:layout_marginBottom="30dp"/>
 
